# poetry_prasad

./: .dockerignore  .env  Dockerfile  README.md  pyproject.toml
app/: main.py
src/prasad/: main.py
src/prasad/auth/profile/: profile.py
src/prasad/auth/routers/: authentication.py
src/prasad/auth/user_management/: user_management.py
src/prasad/auth/user_management/customer_management/: customer_management.py
src/prasad/auth/user_management/operator_management/: operator_management.py
src/prasad/db/: db.py
src/prasad/drone_details/model/: drone_details.py
src/prasad/drone_details/routers/: drone_details.py
src/prasad/equipment_details/model/: equipement_services.py
src/prasad/equipment_details/routers/: equipement_services.py
src/prasad/experience_record/model/: experience_record.py
src/prasad/experience_record/routers/: experience_record.py
src/prasad/images/image_router/: image_router.py
src/prasad/images/image_services/: image_services.py
src/prasad/images/model/: image_model.py
src/prasad/industry/model/: industry.py
src/prasad/industry/router/: industry.py
src/prasad/license/model/: license.py
src/prasad/license/router/: license.py
src/prasad/order/drone_services_order/model/: drone_services_order.py
src/prasad/order/drone_services_order/router/: drone_services_order.py
src/prasad/services/drone_services/model/: drone_service.py
src/prasad/services/drone_services/router/: drone_services.py
src/prasad/user/customer/model/: customer.py
src/prasad/user/customer/router/: customer.py
(+2 files in other folders)
